Fix hero size and central title overflow

--- a/src/components/style.scss
+++ b/src/components/style.scss
@@ -31,3 +31,7 @@
     color: $secondary-color;
   }
 }
+
+.no-scroll {
+    overflow-y: hidden;
+}
